--- a/test/fixtures/meetings.yml
+++ b/test/fixtures/meetings.yml
@@ -1,3 +1,14 @@
+# == Schema Information
+# Schema version: 2
+#
+# Table name: meetings
+#
+#  id             :integer(11)   not null, primary key
+#  name           :string(255)   
+#  cents_per_hour :integer(11)   
+#  currency       :string(255)   
+#
+
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 first:
   id: 1
