--- a/test/fixtures/periods.yml
+++ b/test/fixtures/periods.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+# Schema version: 2
+#
+# Table name: periods
+#
+#  id         :integer(11)   not null, primary key
+#  meeting_id :integer(11)   
+#  created_at :datetime      
+#  stopped_at :datetime      
+#  descr      :string(255)   
+#
+
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 first:
   id: 1
