--- a/config/database.yml
+++ b/config/database.yml
@@ -33,3 +33,13 @@ production:
   username: root
   password: 
   host: localhost
+
+pdamer_development:
+  adapter: mysql
+  database: mc
+  username: mc
+  password:
+  host: desktop
+
+  
+    
