--- a/test/fixtures/alt_widgets.yml
+++ b/test/fixtures/alt_widgets.yml
@@ -5,8 +5,8 @@ alt_widgets_001:
   title: The sucky alternative
   id: "1"
   calc: |
-    def calculate(meeting)
-    "man your meeting must suck"
+    def render(meeting, page, tag)
+      page.replace_html tag, "man your meeting must suck"
     end
 
 alt_widgets_002: 
@@ -15,8 +15,8 @@ alt_widgets_002:
   title: The long meeting
   id: "2"
   calc: |
-    def calculate(meeting)
-    "This meeting has lasted #{meeting.time_in_seconds} seconds"
+    def render(meeting, page, tag)
+      page.replace_html tag, "This meeting has lasted #{meeting.time_in_seconds} seconds"
     end
 
 alt_widgets_003: 
@@ -25,7 +25,7 @@ alt_widgets_003:
   title: Rubics cube
   id: "3"
   calc: |
-    def calculate(meeting)
-    "With practice you could have solved #{(meeting.time_in_seconds/25)to_int} rubic's cubes during this meeting"
+    def render(meeting, page, tag)
+      page.replace_html tag, "With practice you could have solved #{(meeting.time_in_seconds/25).to_int } rubic's cubes during this meeting"
     end
 
