--- a/test/fixtures/alt_widgets.yml
+++ b/test/fixtures/alt_widgets.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+# Schema version: 5
+#
+# Table name: alt_widgets
+#
+#  id           :integer(11)   not null, primary key
+#  name         :string(255)   
+#  title        :string(255)   
+#  calc         :string(255)   
+#  last_used_at :datetime      
+#  views        :integer(11)   
+#
+
 --- 
 alt_widgets_001: 
   name: sucks
