fix meeting stopping and update counter and add/change some db fields
git-svn-id: https://jsv.mine.nu/svn/repos/mc/trunk@180 0889de32-30e5-0310-ab80-ca79f5f4c722

--- a/test/fixtures/meetings.yml
+++ b/test/fixtures/meetings.yml
@@ -1,5 +1,5 @@
 # == Schema Information
-# Schema version: 5
+# Schema version: 6
 #
 # Table name: meetings
 #
@@ -8,6 +8,7 @@
 #  cents_per_hour :integer(11)   
 #  currency       :string(255)   
 #  attendance     :integer(11)   
+#  owner_cookie   :string(255)   
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
