--- a/test/fixtures/invites.yml
+++ b/test/fixtures/invites.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+# Schema version: 8
+#
+# Table name: invites
+#
+#  id               :integer(11)   not null, primary key
+#  message          :string(255)   
+#  inviter_user_id  :integer(11)   
+#  accepter_user_id :integer(11)   
+#  token            :string(255)   
+#
+
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 one:
   id: 1
