get rid of deprecation warnings and add a basic functional test for my edification
git-svn-id: https://jsv.mine.nu/svn/repos/mc/trunk@233 0889de32-30e5-0310-ab80-ca79f5f4c722

--- a/test/fixtures/meetings.yml
+++ b/test/fixtures/meetings.yml
@@ -11,8 +11,7 @@
 #  owner_cookie   :string(255)   
 #
 
-# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
-first:
+valid_meeting:
   id: 1
-another:
-  id: 2
+  name: Some Meeting
+  cents_per_hour: 1000
