--- a/test/fixtures/alt_widgets.yml
+++ b/test/fixtures/alt_widgets.yml
@@ -40,6 +40,6 @@ alt_widgets_003:
   id: "3"
   calc: |
     def render(meeting, page, tag)
-      page.replace_html tag, "With practice you could have solved #{(meeting.time_in_seconds/25).to_int } rubic's cubes during this meeting"
+      page.replace_html tag, "With practice you could have solved #{(meeting.time_in_seconds/25).to_int } rubik's cubes during this meeting"
     end
 
