refactor to handle my meetings, update annotate models
git-svn-id: https://jsv.mine.nu/svn/repos/mc/trunk@349 0889de32-30e5-0310-ab80-ca79f5f4c722

--- a/test/fixtures/alt_widgets.yml
+++ b/test/fixtures/alt_widgets.yml
@@ -1,5 +1,4 @@
 # == Schema Information
-# Schema version: 8
 #
 # Table name: alt_widgets
 #
@@ -10,6 +9,7 @@
 #  last_used_at :datetime      
 #  views        :integer(11)   
 #  data         :text          
+#  type         :string(255)   
 #
 
 --- 
