--- a/config/database.yml
+++ b/config/database.yml
@@ -11,11 +11,8 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: mysql
-  database: mc
-  username: root
-  password:
-  host: 127.0.0.1
+  adapter: sqlite
+  database: mc.sql
 
 # Warning: The database defined as 'test' will be erased and
 # re-generated from your development database when you run 'rake'.
